[gd_scene load_steps=8 format=3 uid="uid://hvnfw5qagefd"]

[ext_resource type="PackedScene" uid="uid://dhu0lcunamfx4" path="res://characters/enemies/mob/mob.tscn" id="1_0euvk"]
[ext_resource type="PackedScene" uid="uid://dt68ku1phupn3" path="res://characters/player/player.tscn" id="1_63u67"]
[ext_resource type="Script" path="res://world/world.gd" id="1_icddk"]
[ext_resource type="PackedScene" uid="uid://dm1nq70ovhvxu" path="res://gui/hud.tscn" id="3_cdudp"]
[ext_resource type="PackedScene" uid="uid://bcwsdtfx72kd0" path="res://controllers/wave_controller.tscn" id="3_mnirc"]
[ext_resource type="PackedScene" uid="uid://dhp515vfrcvt6" path="res://gui/pause_menu.tscn" id="6_7j38u"]

[sub_resource type="Curve2D" id="Curve2D_u2oqr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1080, -1, 0, 0, 0, 0, 1081, 719, 0, 0, 0, 0, 0, 717, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="World" type="Node"]
script = ExtResource("1_icddk")

[node name="HUD" parent="." instance=ExtResource("3_cdudp")]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.372549, 0.380392, 1)

[node name="Player" parent="." instance=ExtResource("1_63u67")]
position = Vector2(540, 420)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_u2oqr")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = -0.000925926

[node name="WaveController" parent="." node_paths=PackedStringArray("mob_spawn_location") instance=ExtResource("3_mnirc")]
mob_scene = ExtResource("1_0euvk")
mob_spawn_location = NodePath("../MobPath/MobSpawnLocation")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartMarker" type="Marker2D" parent="."]
position = Vector2(540, 420)

[node name="PauseMenu" parent="." instance=ExtResource("6_7j38u")]
visible = false

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
